--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: pidgin-screenshot 0.6-5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-24 10:46+0100\n"
-"PO-Revision-Date: 2010-03-24 11:29+0100\n"
+"PO-Revision-Date: 2010-04-14 13:40+0200\n"
 "Last-Translator: nini <nanani19830602@hotmail.com>\n"
 "Language-Team: Chinese (simplified)\n"
 "MIME-Version: 1.0\n"
@@ -216,7 +216,7 @@ msgstr "截图发送"
 
 #: src/main.h:122
 msgid "capture"
-msgstr "捕捉"
+msgstr "capture"
 
 #: src/main.h:125
 msgid "as an _Image"
