Uploaded image hosting providers...

--- a/config/Changelog
+++ b/config/Changelog
@@ -4,6 +4,13 @@ Image hosting providers list Changelog
 [S] terms of Service updated
 [I] Logo changed
 
+v.0.5 	04/14/10
+	* [A]		imageshack.us
+	* [R]		megahorst.com
+	* [R]		hellameke.com
+	* [R]		imagecross.com
+	* [R]		theimghost.com
+	* [R]		imagenerd.com
 
 v.0.4	03/10/10
 	* [A]		imgur.com
