--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Pidgin Screenshot Plugin Changelog
 
+Version 0.8-1 04/16/10:
+	* Present conversation if it is closed (instead of showing an error msg).
+	* Use GIOChannel related funcs instead of fread() fclose().
 Version 0.8 04/15/10:
 	* Don't ignore proxy settings ! (Repported by Paul Matthias Diderichsen and Homolibere).
 	* Faster selection drawing.
