--- a/po/AUTHORS
+++ b/po/AUTHORS
@@ -5,6 +5,7 @@ French,	Raoul Berger, <contact@raoulito.info>
 German,	David Scheffler, <david.scheffler+translation@gmail.com>
 Italian, Roberto Mazzoleni, <fidech@gmail.com>
 Polish, Milosz Odin, <milosz.odin@gmail.com>
+Russian, by Ilya S., <root@nfodb.ru>
 Spanish, Alexander Ovalle, <jaovallea@gmail.com>
 
 Want to translate this plugin ?
