--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: pidgin-screenshot 0.6-5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-10 17:05+0200\n"
-"PO-Revision-Date: 2010-05-10 17:31+0200\n"
+"PO-Revision-Date: 2010-05-10 17:33+0200\n"
 "Last-Translator:  <contact@raoulito.info>\n"
 "Language-Team: French\n"
 "MIME-Version: 1.0\n"
@@ -306,7 +306,7 @@ msgstr "Envoi FTP"
 
 #: src/prefs.h:72
 msgid "Upload options"
-msgstr "Envoi Serveur Externe"
+msgstr "Options d'envoi"
 
 #: src/prefs.h:74
 msgid "Image format: "
