--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
 Pidgin Screenshot Plugin Changelog
 
-Version 0.9
+Version 0.8-2 06/??/10:
 	* New design for preferences window (tabs).
 	* Add a space before inserting a link, if necessary.
-	
+	* Added BMP file format.
+	* Hold shift key to move or resize the selection.
 	
 Version 0.8-1 04/18/10:
 	* Present conversation to show upload link if it is closed 
