--- a/po/AUTHORS
+++ b/po/AUTHORS
@@ -1,12 +1,5 @@
+Please have a look at :
 
-Chinese (simplified), Ni Ni, <nanani19840602@hotmail.com>
-Dutch, Henk van der Velden, <henkvandervelden86@gmail.com>
-French,	Raoul Berger, <contact@raoulito.info>
-German,	David Scheffler, <david.scheffler+translation@gmail.com>
-Italian, Roberto Mazzoleni, <fidech@gmail.com>
-Polish, Milosz Odin, <milosz.odin@gmail.com>
-Russian, by Ilya S., <root@nfodb.ru>
-Spanish, Alexander Ovalle, <jaovallea@gmail.com>
 
 Want to translate this plugin ?
 Send me an email ;)
